bleme/api-payment/base/resources/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-geoip
  labels:
    app: api-geoip
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
spec:
  selector:
    app: api-geoip
  type: NodePort
  ports:
  - name: api-geoip
    port: 80
    targetPort: 80
